docs/7.57/md/abennews-740-others.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.40 and its SPs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740.htm) →  [News for Release 7.40, SP02](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp02.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Further Changes in Release 7.40, SP02, ABENNEWS-740-OTHERS, 757%0D%0A%0D%0AError:%0D%
0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Further Changes in Release 7.40, SP02

[1\. ABAP Doc](#!ABAP_MODIFICATION_1@1@)
[2\. Authorization Check in CALL TRANSACTION](#!ABAP_MODIFICATION_2@2@)
[3\. Enhancement to RTTI](#!ABAP_MODIFICATION_3@3@)
[4\. Documentation Moved](#!ABAP_MODIFICATION_4@4@)

Modification 1   

ABAP Doc

Special [ABAP Doc comments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_doc_comment_glosry.htm "Glossary Entry") can be entered in front of [declaration statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendeclaration_statement_glosry.htm "Glossary Entry"). These comments are prefixed by "!. Tools of an [ABAP development environment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dev_envir_glosry.htm "Glossary Entry") that support [ABAP Doc](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_doc_glosry.htm "Glossary Entry"), such as [ABAP Development Tools](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadt_glosry.htm "Glossary Entry"), analyze the content of ABAP Doc comments, converts it to HTML and display the content in an appropriate way.

Modification 2   

Authorization Check in CALL TRANSACTION

The new additions [WITH AUTHORITY-CHECK](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcall_transaction_authority.htm) and [WITHOUT AUTHORITY-CHECK](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcall_transaction_authority.htm) make it possible to perform or skip an authorization check when executing the statement [CALL TRANSACTION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcall_transaction.htm). This makes the statement CALL TRANSACTION [obsolete](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcall_transaction_auth_obs.htm) if neither of these additions are specified.

Modification 3   

Enhancement to RTTI

The attribute METHODS of the object description class CL\_ABAP\_OBJECTDESCR has a new component, IS\_RAISING\_EXCPS, which can be used to determine whether the exception of a method is class-based. Also, the tabular component EXCEPTIONS the new component IS\_RESUMABLE, which can be used to determine whether a class-based exception can be propagated as a resumable exception.

Modification 4   

Documentation Moved

The documentation describing

-   [shared objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_shared_objects.htm)
-   [object services](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_object_services.htm)
-   [iXML Library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_ixml_lib.htm)
-   [sXML Library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sxml_lib.htm)
-   [logical databases](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenldb.htm)

has been integrated into the ABAP keyword documentation.